--- a/Proxy/Views/Home/Index.cshtml
+++ b/Proxy/Views/Home/Index.cshtml
@@ -5,5 +5,8 @@
 <div class="text-center">
     <h1 class="display-4">Welcome to Proxy</h1>
     <p>Share files, notes and texts between devices in your local network.</p>
+    <h4>Server IP: @(ViewData["LocalIPAddress"]):5087</h4>
     <a href="https://github.com/Byte-White/Proxy">github page</a>
 </div>
+
+
