Implemented a function to generate a QR code for the local IP address and display it on the Home page

--- a/Proxy/Views/Home/Index.cshtml
+++ b/Proxy/Views/Home/Index.cshtml
@@ -5,7 +5,9 @@
 <div class="text-center">
     <h1 class="display-4">Welcome to Proxy</h1>
     <p>Share files, notes and texts between devices in your local network.</p>
-    <h4>Server IP: @(ViewData["LocalIPAddress"]):5087</h4>
+    <h4>Server IP: @(ViewData["LocalIPAddress"])</h4>
+    <img src="@ViewData["QrCodeImage"]" alt="QR Code" style="width: 300px; height: 300px;"/>
+    <br />
     <a href="https://github.com/Byte-White/Proxy">github page</a>
 </div>
 
